# epic_point_cloud_distortion_correction

./: .gitignore  CMakeLists.txt  README.md  TROUBLESHOOTING.md  build.sh  debug_check.sh  package.xml
config/: correction_params.yaml  correction_top_params.yaml
include/: correction_node.hpp  pcl_tool.hpp
launch/: correction.launch.py  correction_top.launch.py
src/: correction_node.cpp  main.cpp  pcl_tool.cpp
